Fix preSets not passing correct IDs

--- a/index.html
+++ b/index.html
@@ -127,8 +127,8 @@
             <div id="preSetTool"class="tool hidden">
                 <div class="sub-tool">
                     <button id="preSet01" onclick="preSetTool.handleSpawnPreSet(this.id)">Three Body Problem</button>
-                    <button id="preSet02" onclick="preSetTool.handleSpawnPreSet(event)">Inner Solar System</button>
-                    <button id="preSet03" onclick="preSetTool.handleSpawnPreSet(event)">Chaotic Binary Star System</button>
+                    <button id="preSet02" onclick="preSetTool.handleSpawnPreSet(this.id)">Inner Solar System</button>
+                    <button id="preSet03" onclick="preSetTool.handleSpawnPreSet(this.id)">Chaotic Binary Star System</button>
                 </div>
             </div>
             <div id="infoTool" class="tool hidden">
